Removed direct call to Class.newInstance()